<resources>
    <string name="app_name">Feedi</string>
    <string name="snackBar_dismiss_label">cerrar</string>
    <string name="home_label">Hola %1$s, con id %2$s</string>
    <string name="forgot_password_label">Recuperar Contraseña</string>
    <string name="signup_label">Registrarse</string>
    <string name="login_label">Ingresar</string>
    <string name="password_label">Contraseña</string>
    <string name="email_label">Email</string>
    <string name="mail_error_label">El email no puede estar vacio.</string>
    <string name="error_pass_label">El password no puede estar vacio.</string>
    <string name="create_user_button_label">Crear Usuario</string>
    <string name="name_label">Nombre</string>
    <string name="create_a_new_profile">Registro</string>
    <string name="phone_label">Celular</string>
    <string name="logout_menu_item">Salir</string>
    <string name="message_chat_hint">Mensaje</string>
    <string name="Rol">Rol</string>
    <string name="Client">Cliente</string>
    <string name="Restaurant">Restaurante</string>
    <string name="Ini">Ya puedes iniciar sesión en</string>
    <string name="HelpPass">Mínimo 6 carácteres</string>
    <string name="search">Busca un Restaurante</string>
    <string name="ofertas">Ofertas</string>
    <string name="infoPerfil">Aquí puedes ver los datos de tu perfil</string>
    <string name="perfil">Perfil</string>
    <string name="nombre">Nombre</string>
    <string name="correo">Correo</string>
    <string name="celular">Celular</string>
    <string name="editPerfil">Editar datos</string>
    <string name="carrito">Carrito</string>
    <string name="infoCarrito">Aquí puedes ver tus comidas seleccionadas</string>
    <string name="pedido">Realizar Pedido</string>
    <string name="medioPago">Medio de Pago</string>
    <string name="detalle">Detalle</string>
    <string name="total">Total</string>
    <string name="pse">PSE</string>
    <string name="nequi">Nequi</string>
    <string name="daviplata">Daviplata</string>
    <string name="btnCerrar">Cerrar Sesión</string>
    <string name="publicar">Publicar</string>
    <string name="infoPublicar">Aquí puedes escribir los detalles del producto y publicarlo</string>
    <string name="galeria">Seleccionar Imágen</string>
    <string name="camara">Cámara</string>
    <string name="infoimg">Sube una imágen del producto</string>
    <string name="cantidad">Cantidad</string>
    <string name="precio">Precio</string>

    <!-- Restaurantes -->
    <string-array name="nombres_restaurantes">
        <item>Mirador</item>
        <item>Kiosco Urapanes</item>
        <item>El Sauce</item>
        <item>La Crepería</item>
        <item>Café Urgencias</item>
    </string-array>
    <!-- Ofertas -->
    <string-array name="nombres_ofertas">
        <item>Burrito</item>
        <item>Croissant</item>
        <item>Pescadito</item>
        <item>Sandwich</item>
        <item>Rollo de Canela</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>