<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PublicarFragment"
    android:background="@color/purple_50">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="-40dp"
            android:paddingHorizontal="40dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="60dp"
                app:layout_constraintTop_toBottomOf="@+id/view">

                <TextView
                    android:id="@+id/txt_publicar"
                    style="@style/TextAppearance.MaterialComponents.Headline4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/publicar"
                    android:textAlignment="center"
                    android:textColor="@color/purple_300"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txt_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/infoPublicar"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_publicar" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/image_thumbnail"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginTop="40dp"
                    android:src="@drawable/logo"
                    app:civ_border_color="@color/purple_400"
                    app:civ_border_width="2dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_info"/>

                <TextView
                    android:id="@+id/txt_foto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/infoimg"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/image_thumbnail" />

                <Button
                    android:id="@+id/btn_galeria"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/galeria"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:cornerRadius="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_foto"
                    app:layout_constraintTop_toTopOf="parent" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/Nombre"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:layout_marginTop="20dp"
                    android:hint="@string/name_label"
                    android:minHeight="48dp"
                    app:endIconMode="clear_text"
                    app:startIconDrawable="@drawable/ic_baseline_restaurant_menu_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_galeria">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapWords"
                        android:textColorHint="@color/grey_800"
                        tools:ignore="TextContrastCheck" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/cantidad"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/cantidad"
                    android:background="@color/white"
                    android:minHeight="48dp"
                    app:endIconMode="clear_text"
                    app:startIconDrawable="@drawable/ic_baseline_food_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/Nombre">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:textColorHint="@color/grey_800"
                        tools:ignore="TextContrastCheck" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/precio"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:layout_marginTop="20dp"
                    android:hint="@string/precio"
                    android:minHeight="48dp"
                    app:endIconMode="clear_text"
                    app:startIconDrawable="@drawable/ic_baseline_money_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cantidad">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:textColorHint="@color/grey_800"
                        tools:ignore="TextContrastCheck" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_publicar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/publicar"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:cornerRadius="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/precio" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
</FrameLayout>