<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PerfilFragment"
    android:background="@color/purple_50">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout1"
            android:layout_width="match_parent"
            android:layout_height="189dp">

            <io.github.florent37.shapeofview.shapes.ArcView
                android:id="@+id/arc"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:elevation="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shape_arc_height="25dp"
                app:shape_arc_position="bottom">

                <View
                    android:id="@+id/view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/purple_200" />

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/anim_aguacate" />

            </io.github.florent37.shapeofview.shapes.ArcView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="-40dp"
            android:paddingHorizontal="40dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="60dp"
                app:layout_constraintTop_toBottomOf="@+id/view">

                <TextView
                    android:id="@+id/txt_perfil"
                    style="@style/TextAppearance.MaterialComponents.Headline4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/perfil"
                    android:textAlignment="center"
                    android:textColor="@color/purple_300"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txt_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/infoPerfil"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_perfil" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_info">

                    <TextView
                        android:id="@+id/TextNNombre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/nombre"
                        android:textColor="@color/black_1000"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/textEsp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="usuario"
                        android:textColor="@color/black_1000"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/TextNCorreo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/correo"
                        android:textColor="@color/black_1000"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/textCorreo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="usuario@gmail.com"
                        android:textColor="@color/black_1000"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/TextNCelular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/celular"
                        android:textColor="@color/black_1000"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/TextCelular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="3125208584"
                        android:textColor="@color/black_1000"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <Button
                        android:id="@+id/btn_perfil"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:text="@string/editPerfil"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        app:cornerRadius="20dp" />
                    <Button
                        android:id="@+id/btn_cerrarSesion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:text="@string/btnCerrar"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        app:cornerRadius="20dp" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>

</FrameLayout>